--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,5 +7,15 @@
   "manifest_version": 3,
   "action": {
     "default_popup": "index.html"
-  }
+  },
+  "background": {
+    "service_worker": "src/background/background.js",
+    "type": "module"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["src/content/content.js"]
+    }
+  ]
 }
